@@ -93,6 +93,9 @@ void OvmsVehicleRenaultTwizy::BatteryInit()
   m_batt_use_temp_min = MyMetrics.InitFloat("xrt.b.u.temp.min", SM_STALE_HIGH, 0, Celcius);
   m_batt_use_temp_max = MyMetrics.InitFloat("xrt.b.u.temp.max", SM_STALE_HIGH, 0, Celcius);
 
+  m_batt_energy_avail = MyMetrics.InitFloat("xrt.b.energy.avail", SM_STALE_HIGH, 0, kWh, true);
+  m_batt_energy_full  = MyMetrics.InitFloat("xrt.b.energy.full", SM_STALE_HIGH, 0, kWh, true);
+
   twizy_bms_type      = BMS_TYPE_ORIG;
   m_bms_type          = MyMetrics.InitInt("xrt.bms.type", SM_STALE_HIGH, BMS_TYPE_ORIG);
   m_bms_state1        = MyMetrics.InitInt("xrt.bms.state1", SM_STALE_HIGH, 0);
