@@ -401,6 +401,9 @@ class OvmsVehicleRenaultTwizy : public OvmsVehicle
     OvmsMetricFloat *m_batt_use_temp_min;
     OvmsMetricFloat *m_batt_use_temp_max;
 
+    OvmsMetricFloat *m_batt_energy_avail;
+    OvmsMetricFloat *m_batt_energy_full;
+
     //OvmsMetricFloat *m_batt_max_drive_pwr;
     //OvmsMetricFloat *m_batt_max_recup_pwr;
 
